--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
           
     watchtower:
       image: containrrr/watchtower
+      container_name: watchtower
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
         - /root/.docker/config.json:/config.json
