--- a/docker-compose-caller.yml
+++ b/docker-compose-caller.yml
@@ -12,6 +12,21 @@
     volumes:
       - ./autodarts:/root/.config/autodarts
           
+  autodarts-caller:
+    image: lbormann/autodarts-caller:latest
+    container_name: autodarts-caller
+    restart: unless-stopped
+    ports:
+      - "8079:8079" #Host Port
+    devices:
+      - /dev/snd:/dev/snd
+    env_file:
+      - ./autodarts.env
+    volumes:
+      - ./autodarts-caller/media:/usr/share/autodarts-caller/media
+      - ./autodarts-caller/media-shared:/usr/share/autodarts-caller/media-shared
+      - ./autodarts-caller:/usr/share/autodarts-caller
+  
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
