--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,22 @@
     image: michvllni/autodarts:latest
     container_name: autodarts
     restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
     ports:
       - "3180:3180"
-    devices:
-      - /dev/video0:/dev/video0
-      - /dev/video2:/dev/video2
-      - /dev/video4:/dev/video4
+    privileged: true
     volumes:
-      - ./autodarts:/root/.config/autodarts
-          
+      - autodarts_config:/root/.config/autodarts
+
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
+    environment:
+      - WATCHTOWER_LABEL_ENABLE=true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 3600
+
+volumes:
+  autodarts_config:
