:sparkles: fix volume

--- a/collector/docker-compose.yml
+++ b/collector/docker-compose.yml
@@ -4,9 +4,5 @@ services:
     container_name: collector
     restart: unless-stopped
     volumes:
-      - collector_data:/etc/opentelemetry-collector
+      - ./config.yml:/etc/opentelemetry-collector/config.yml
     command: --config=/etc/opentelemetry-collector/config.yml
-
-volumes:
-  collector_data:
-    name: "collector_data"
