--- a/collector/docker-compose.yml
+++ b/collector/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     container_name: collector
     restart: unless-stopped
     volumes:
-      - ./config.yml:/etc/opentelemetry-collector/config.yml
+      - config.yml:/etc/opentelemetry-collector/config.yml
     command: --config=/etc/opentelemetry-collector/config.yml
