--- a/collector.docker-compose.yml
+++ b/collector.docker-compose.yml
@@ -1,14 +1,8 @@
-configs:
-  collector_config:
-    file: ./collector-config.yml
-    external: true
-
 services:
   collector:
     image: otel/opentelemetry-collector
     container_name: collector
     restart: unless-stopped
-    configs:
-      - source: collector_config
-        target: /etc/opentelemetry-collector
-    command: --config=/etc/opentelemetry-collector/collector-config.yml
+    volumes:
+      - ./collector:/etc/opentelemetry-collector
+    command: --config=/etc/opentelemetry-collector/config.yml
