--- a/collector/docker-compose.yml
+++ b/collector/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: collector
     restart: unless-stopped
     volumes:
-      - collector_data:/etc/opentelemetry-collector
+      - ./config.yml:/etc/opentelemetry-collector/config.yml
     command: --config=/etc/opentelemetry-collector/config.yml
     env_file:
       - .env
