:sparkles: add memory utilization for config.yml

--- a/collector/config.yml
+++ b/collector/config.yml
@@ -9,6 +9,9 @@ receivers:
       disk:
       load:
       memory:
+        metrics:
+          system.memory.utilization:
+            enabled: true
       network:
 
 processors:
